@@ -2,6 +2,9 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fl_File_Chooser now returns directory names with a
+	  trailing slash to avoid problems with relative
+	  filenames (STR #819)
 	- Fl_Help_View now supports the FONT and U elements (STR
 	  #815)
 	- OpenGL windows that were completely off-screen caused
